<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/painting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/painting_name" />

    <EditText
        android:id="@+id/artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/artist_name" />

    <EditText
        android:id="@+id/painting_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/painting_age" />


    <CheckBox
        android:id="@+id/in_museum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="isMuseumClicked"
        android:text="@string/in_a_museum" />

    <EditText
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/about_text" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit_button"
        android:onClick="launchActivity"/>

</LinearLayout>